# MIA_IA_system_mentor_q

./: .dockerignore  .env.automation  .env.live  .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT_FEUILLE_DE_ROUTE.md  AUDIT_LISTE_DETAILLEE_MODULES.md  BILAN_TEST_SYSTEM_COMPLET.md  CONFIGURATION_FINALE_GRAPH4.md  CORRECTIONS_APPLIQUEES.md  CORRECTIONS_VOLUME_PROFILE_FINALES.md  CORRECTIONS_VVA_IMPLEMENTEES.md  CORRECTION_NBCV_PRESSURE.md  CORRECTION_VIX_CROSS_CHART.md  DEPLOYMENT_FINAL_MIA_SYSTEM.md  DOCUMENTATION_COMPLETE_METHODES_TRADING.md  DOCUMENTATION_SUBGRAPHS_SIERRA_CHART.md  Dockerfile  ETAT_DES_LIEUX_ARCHITECTURE.md  GUIDE_COLLECTION_VIX_HL_BAR_4TICK.md  GUIDE_COMPILATION_SIERRA.md  GUIDE_COMPILATION_VIX_AMELIORE.md  GUIDE_EXPORT_VIX_GRAPHIQUE_8.md  GUIDE_HL_BAR_4TICK_REVERSAL.md  GUIDE_TEST_VIX_DIRECT.md  GUIDE_TICK_REVERSAL_SIERRA_CHART.md  GUIDE_VIX_COLLECTION_AMELIORE.md  INTEGRATION_PATTERN_STRATEGIES_FINAL.md  MAPPING_ETUDES_SIERRA.md  MIA_Chart_Dumper_Reconstructed.cpp  MIA_Chart_Dumper_Reconstructed_Fixed.cpp  MIA_Chart_Dumper_patched - Copie.cpp  MIA_Chart_Dumper_patched.cpp  MIA_Chart_Dumper_patched_NO_GOTO.cpp  MIA_Chart_Dumper_patched_VIX_NBCV_Daily.cpp  MIA_Chart_Dumper_patched_VIX_NBCV_Quotes_Corrected_Daily.cpp  MIA_Chart_Dumper_patched_VIX_NBCV_Quotes_Daily.cpp  MIA_Chart_Dumper_patched_VIX_NBCV_Quotes_Final_Corrected.cpp  MIA_Chart_Dumper_patched_VIX_NBCV_Quotes_ID33.cpp  (+266 more)
BACKUP_20250919_024800/: launch_24_7_menthorq_final.py
DOCUMENT JACKSON/: GUIDE SETUP DISCORD - MIA_IA_SYSTEM.txt  LISTE COMPLÈTE FICHIERS PHASE 3.txt  Récapitulatif des tâches à faire .txt  a faire en 1.txt
GITHUB/: ARCHITECTURE_MULTI_CHART_SIERRA.md  RAPPORT_FINAL_SETUP_GITHUB.md  README_GITHUB.md  repo_atlas.py
LAUNCH/: launch_24_7_menthorq_final.py
_dq/: data_quality_report.json  data_quality_report.md
automation_modules/: __init__.py  config_manager.py  confluence_calculator.py  optimized_trading_system.py  order_manager.py  orderflow_analyzer.py  performance_tracker.py  risk_manager.py  sierra_battle_navale_integrator.py  sierra_config.py  sierra_connector.py  sierra_dom_analyzer.py  sierra_dom_integrator.py  sierra_optimizer.py  sierra_patterns_complete_integrator.py  sierra_patterns_optimizer.py  sierra_vix_analyzer.py  sierra_vix_dom_integrator.py  signal_validator.py  trading_engine.py  trading_executor.py  validation_engine.py
backtests/: backtest_analyse_finale.py  backtest_equilibre.py  backtest_final.py  backtest_final_simple.py  backtest_robuste.py  backtest_robuste_sans_core.py  backtest_sans_core.py  backtest_simple.py  backtest_ultra_simple_analyse.py  backtest_ultra_simple_final.py
backup_before_logging_update/: __init__.py  add_position_class.py  analyze_and_fix_model_trainer.py  automation_main_minimal.py  backup_info_20250628_130312.txt  check_actual_exports.py  check_syntax_errors.py  clean_utf8_aggressive.py  data_collection_main.py  debug_data_collection.py  diagnostic_v2.py  final_fix_script.py  final_test.py  find_utf8_issues.py  fix_circular_imports.py  fix_encoding.py  fix_import_errors.py  fix_import_mismatch.py  fix_import_names.py  fix_imports_one_by_one.py  fix_init_files.py  fix_ml_init_exports.py  fix_ml_simple_linear_model_export.py  fix_monitoring_imports.py  fix_project.py  fix_remaining_imports.py  fix_simple_trader.py  fix_simple_trader_complete.py  fix_simple_trader_indent.py  fix_simple_trader_main.py  force_fix_init.py  launch_automation.py  launch_automation_fixed.py  manual_fix_init_py.py  remove_utf8_encoding.py  syntax_fixer.py  test_automation_main.py  test_basic.py  test_cache_debug.py  test_cache_functionality.py  (+10 more)
backup_discord/: discord_notifier_20250630_131747.py  simple_trader_20250630_131747.py
backup_discord_multi/: discord_notifier_20250630_134610.py
backup_syntax_fix/: automation_main.py
backups/: confluence_analyzer_final_fix_20250623_032815.py.bak
config/: 15min_1hour_strategy_config.py  __init__.py  __init__.py.backup_force  __init__.py.bak  automation_config.py  automation_config.py.backup_import  battle_navale_v2.json  bypass_async_session.json  bypass_final_session.json  bypass_options_session.json  config_loader.py  config_manager.py  confluence_analyzer.py  confluence_config.py  constants.py  constants.yaml  constants_loader.py  create_simulated_snapshot.py  data_collection_risk_config.py  environment_manager.py  es_real_direct_session.json  es_real_only_session.json  feature_calculator.backup_20250701_031129.py  feature_config.base.json  feature_config.dev.json  feature_config.json  feature_config.prod.json  feature_config.production.json  feature_config.staging.json  holidays_us.json  hybrid_trading_config.py  latency_optimization_config.py  leadership_analyzer.py  leadership_calibration.yaml  leadership_config.py  leadership_engine.py  leadership_validator.py  loader_v2.py  logging_config.py  market_hours.json  (+28 more)
(+1685 files in other folders)
